[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Level_select.gd" type="Script" id=1]
[ext_resource path="res://assets/sokodot_menu.webm" type="VideoStream" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/ALBA____.TTF"

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = SubResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://fonts/ALBA____.TTF"

[sub_resource type="DynamicFont" id=5]
size = 128
font_data = SubResource( 4 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 3 )
script = ExtResource( 1 )

[node name="VideoPlayer" type="VideoPlayer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
stream = ExtResource( 2 )
autoplay = true

[node name="Menu_Buttons" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 448.0
margin_top = -464.0
margin_right = 856.0
margin_bottom = -24.0

[node name="Level1_Button" type="Button" parent="Menu_Buttons"]
margin_right = 408.0
margin_bottom = 107.0
focus_neighbour_top = NodePath("../Level3_Button")
text = "Level 1"
flat = true

[node name="Level2_Button" type="Button" parent="Menu_Buttons"]
margin_top = 111.0
margin_right = 408.0
margin_bottom = 218.0
text = "Level 2"
flat = true

[node name="Level3_Button" type="Button" parent="Menu_Buttons"]
margin_top = 222.0
margin_right = 408.0
margin_bottom = 329.0
focus_neighbour_bottom = NodePath("../Level1_Button")
text = "Level 3"
flat = true

[node name="Return_Button" type="Button" parent="Menu_Buttons"]
margin_top = 333.0
margin_right = 408.0
margin_bottom = 440.0
focus_neighbour_top = NodePath("../Level3_Button")
text = "Return"
flat = true

[node name="Label" type="Label" parent="."]
margin_left = 256.0
margin_top = 64.0
margin_right = 1024.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 5 )
text = "Sokodot"
align = 1
valign = 1

[connection signal="pressed" from="Menu_Buttons/Level1_Button" to="." method="_on_Level1_Button_pressed"]
[connection signal="pressed" from="Menu_Buttons/Level2_Button" to="." method="_on_Level2_Button_pressed"]
[connection signal="pressed" from="Menu_Buttons/Level3_Button" to="." method="_on_Level3_Button_pressed"]
[connection signal="pressed" from="Menu_Buttons/Return_Button" to="." method="_on_Return_Button_pressed"]
